Restructure / logic corrections / improving performance

--- a/components/product/product-tabviews/product-tabview-bottom/components/product-tabs.module.css
+++ b/components/product/product-tabviews/product-tabview-bottom/components/product-tabs.module.css
@@ -1,20 +1,21 @@
 .tabsList {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
 }
 
 .tabItem {
-  font-family: var(--font-montserrat);
-  color: var(--p-grey-dark);
-  font-size: 22px;
-  line-height: 27px;
-  padding-bottom: 10px;
+    font-family: var(--font-montserrat);
+    color: var(--p-grey-dark);
+    font-size: 22px;
+    line-height: 27px;
+    padding-bottom: 10px;
+    cursor: pointer;
 }
 
 .tabItem_active {
-  color: var(--p-text);
-  border-bottom: 2px solid var(--p-blue);
+    color: var(--p-text);
+    border-bottom: 2px solid var(--p-blue);
 }
