--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,8 +1,9 @@
+@import url('bootstrap/dist/css/bootstrap.min.css');
+
+@import url('../../styles/globals.css');
 @import url('../../styles/vendor/normalize.css');
 @import url('../../styles/vendor/fonts.css');
 @import url('../../styles/vendor/variables.css');
-
-@import url('bootstrap/dist/css/bootstrap.min.css');
 
 @import url('../../styles/blocks/root/root.css');
 @import url('../../styles/blocks/root/__header/root__header.css');
