--- a/components/product/product-tabviews/product-tabview-top/components/tabs/price-map/price-map.module.css
+++ b/components/product/product-tabviews/product-tabview-top/components/tabs/price-map/price-map.module.css
@@ -1,5 +1,6 @@
 .container {
     position: relative;
+    font-family: var(--font-montserrat);
     margin-top: 3em;
 }
 
@@ -15,8 +16,10 @@
 }
 
 .mapHeader__button {
-    width: 140px;
+    width: 150px;
     height: 100%;
+    font-size: 16px;
+    line-height: 140%;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
     border-radius: 23px;
 }
