--- a/components/product/product-tabviews/product-tabview-bottom/components/product-tabs.module.css
+++ b/components/product/product-tabviews/product-tabview-bottom/components/product-tabs.module.css
@@ -1,9 +1,22 @@
 .tabsList {
-    margin: 0;
-    padding: 0;
-    list-style: none;
     display: flex;
     justify-content: space-around;
+    background: url('/images/bg-line.svg') no-repeat bottom;
+    margin-bottom: 20px;
+    padding-top: 14px;
+    list-style: none;
+    z-index: 2000;
+}
+
+.tabsList::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -20px;
+    bottom: 1px;
+    left: -20px;
+    background-color: #fff;
+    z-index: -1;
 }
 
 .tabItem {
@@ -11,7 +24,7 @@
     color: var(--p-grey-dark);
     font-size: 22px;
     line-height: 27px;
-    padding-bottom: 10px;
+    padding: 0 15px 10px;
     cursor: pointer;
 }
 
