--- a/styles/blocks/footer/__link/footer__link.css
+++ b/styles/blocks/footer/__link/footer__link.css
@@ -1,4 +1,5 @@
-.footer__link {
-  color: #fff;
-  text-decoration: none;
+.footer__link,
+.footer__link:hover {
+    color: #fff;
+    text-decoration: none;
 }
