--- a/styles/blocks/link.module.css
+++ b/styles/blocks/link.module.css
@@ -1,10 +1,10 @@
 .link {
-  cursor: pointer;
-  display: block;
-  transition: all 300ms ease;
+    cursor: pointer;
+    display: block;
+    transition: all 300ms ease;
 }
 
 .link:hover {
-  transform: translateX(5px);
-  opacity: .6;
+    transform: translateX(5px);
+    opacity: 0.8;
 }
