--- a/styles/blocks/header/__wrapper/header__wrapper.css
+++ b/styles/blocks/header/__wrapper/header__wrapper.css
@@ -7,3 +7,10 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+  .header__wrapper {
+    max-width: 375px;
+    padding: 22px;
+  }
+}
