--- a/styles/blocks/products/__controls/products__controls.css
+++ b/styles/blocks/products/__controls/products__controls.css
@@ -4,3 +4,9 @@
   grid-template-columns: 1fr 188px;
   grid-column-gap: 46px;
 }
+
+@media screen and (max-width: 768px) {
+  .products__controls {
+    display: none;
+  }
+}
