--- a/styles/blocks/root/__slogan/root__slogan.css
+++ b/styles/blocks/root/__slogan/root__slogan.css
@@ -1,3 +1,9 @@
 .root__slogan {
   margin: 97px auto 67px;
 }
+
+@media screen and (max-width: 768px) {
+  .root__slogan {
+    margin: 30px auto 22px;
+  }
+}
