--- a/styles/blocks/header/__menu-button/header__menu-button.css
+++ b/styles/blocks/header/__menu-button/header__menu-button.css
@@ -12,3 +12,10 @@
 .header__menu-button:focus {
   outline: none;
 }
+
+@media screen and (max-width: 768px) {
+  .header__menu-button {
+    width: 27px;
+    height: 9px;
+  }
+}
