--- a/styles/blocks/products/__list/products__list.css
+++ b/styles/blocks/products/__list/products__list.css
@@ -1,9 +1,16 @@
 .products__list {
-  grid-column: 1 / 3;
   margin: 0 0 40px;
   padding: 0;
   list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   grid-gap: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  .products__list {
+    margin: 0 0 15px;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    grid-gap: 12px;
+  }
 }
