--- a/styles/blocks/products/__tabs/products__tabs.css
+++ b/styles/blocks/products/__tabs/products__tabs.css
@@ -4,5 +4,11 @@
   list-style: none;
   display: flex;
   justify-content: center;
-  grid-column: 1 / 3;
+}
+
+@media screen and (max-width: 768px) {
+  .products__tabs {
+    margin: 0 0 15px;
+    justify-content: space-between;
+  }
 }
