--- a/styles/blocks/slogan/slogan.css
+++ b/styles/blocks/slogan/slogan.css
@@ -9,3 +9,10 @@
 
   color: #02569c;
 }
+
+@media screen and (max-width: 768px) {
+  .slogan {
+    font-size: 19px;
+    line-height: 23px;
+  }
+}
