--- a/components/product/latest-offers/latest-offers.module.css
+++ b/components/product/latest-offers/latest-offers.module.css
@@ -7,9 +7,13 @@
 .currentOffers__title {
   font-family: var(--font-montserrat);
   color: var(--grey-default);
-  font-weight: bold;
   font-size: 36px;
   line-height: 50px;
+
+  padding-left: 10px;
+  margin-top: 80px;
+  margin-bottom: 50px;
+  font-weight: normal;
 }
 
 .currentOffers__titleLabel {
@@ -99,4 +103,29 @@
   font-weight: normal;
   font-size: 19px;
   text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .currentOffers__title {
+    font-size: 12px;
+    margin: 0;
+  }
+
+  .currentOffers__tableHeaderCell {
+    font-size: 10px;
+    line-height: 140%;
+  }
+
+  .currentOffers__tableCell {
+    font-size: 10px;
+    line-height: 140%;
+  }
+
+  .currentOffers__tableCell_price {
+    color: #f66e08;
+  }
+
+  .mobHiddenCol {
+    display: none;
+  }
 }
