--- a/styles/blocks/root/__products/root__products.css
+++ b/styles/blocks/root/__products/root__products.css
@@ -1,3 +1,9 @@
 .root__products {
   margin: 0 auto 100px;
 }
+
+@media screen and (max-width: 768px) {
+  .root__products {
+    margin: 0 auto 20px;
+  }
+}
