--- a/components/other-blocks/ask-for-quote/ask-for-quote.module.css
+++ b/components/other-blocks/ask-for-quote/ask-for-quote.module.css
@@ -1,12 +1,12 @@
 .ask {
-  margin-top: 144px;
-  margin-bottom: 120px;
   background-color: var(--tab);
   border-radius: 5px;
   padding: 44px 57px 45px 48px;
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 1200px;
+  margin: 144px auto 120px;
 }
 
 .contentWrapper {
