feat: adapt about page to mobile p.1
Blocks adapted:
features
achievement
milestones
futures

--- a/styles/blocks/achievement/__decoration/achievement__decoration.css
+++ b/styles/blocks/achievement/__decoration/achievement__decoration.css
@@ -10,3 +10,9 @@
 
   border-top-right-radius: 5px;
 }
+
+@media screen and (max-width: 768px) {
+  .achievement__decoration {
+    display: none;
+  }
+}
