--- a/styles/blocks/milestones/__list/milestones__list.css
+++ b/styles/blocks/milestones/__list/milestones__list.css
@@ -5,3 +5,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 768px) {
+  .milestones__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 9px;
+  }
+}
