--- a/styles/blocks/achievement/__text/achievement__text.css
+++ b/styles/blocks/achievement/__text/achievement__text.css
@@ -2,8 +2,17 @@
   flex: 0 0 776px;
   margin: 0;
 
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1.3;
   font-family: var(--font-montserrat);
   font-weight: 400;
+  color: var(--grey-default);
+}
+
+@media screen and (max-width: 768px) {
+  .achievement__text {
+    flex: initial;
+    margin: 0;
+    font-size: 10px;
+  }
 }
