--- a/styles/blocks/achievement/achievement.css
+++ b/styles/blocks/achievement/achievement.css
@@ -3,3 +3,11 @@
   margin: 0 auto 120px auto;
   padding: 0 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .achievement {
+    max-width: 375px;
+    margin: 0 auto 30px auto;
+    padding: 0 20px;
+  }
+}
