--- a/styles/blocks/features/__item/features__item.css
+++ b/styles/blocks/features/__item/features__item.css
@@ -1,3 +1,9 @@
 .features__item_has-two-columns {
   grid-column: 1 / 3;
 }
+
+@media screen and (max-width: 768px) {
+  .features__item {
+    margin-bottom: 16px;
+  }
+}
