--- a/styles/blocks/features/features.css
+++ b/styles/blocks/features/features.css
@@ -3,3 +3,11 @@
   margin: 122px auto 60px auto;
   padding: 0 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .features {
+    max-width: 375px;
+    margin: 16px auto 0;
+    padding: 0 21px;
+  }
+}
