--- a/styles/blocks/future-card/__icon/future-card__icon.css
+++ b/styles/blocks/future-card/__icon/future-card__icon.css
@@ -11,3 +11,20 @@
   width: 55px;
   margin-bottom: 5px;
 }
+
+@media screen and (max-width: 768px) {
+  .future-card__icon {
+    display: block;
+  }
+
+  .future-card__icon_big {
+    width: 20px;
+    margin-bottom: 9px;
+  }
+
+  .future-card__icon_little {
+    width: 20px;
+
+    margin-bottom: 9px;
+  }
+}
