--- a/styles/blocks/future-card/__text/future-card__text.css
+++ b/styles/blocks/future-card/__text/future-card__text.css
@@ -3,6 +3,11 @@
 
   font-family: var(--font-montserrat);
   color: var(--p-blue);
+
+  font-size: 22px;
+  line-height: 1.4;
+  font-weight: 500;
+  text-align: center;
 }
 
 .future-card__text_big {
@@ -16,4 +21,16 @@
   line-height: 1.4;
   font-weight: 500;
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .future-card__text {
+    font-size: 9px;
+    font-weight: 400;
+  }
+
+  .future-card__text_big {
+    font-size: 9px;
+    font-weight: 400;
+  }
 }
