--- a/styles/blocks/future-desc/future-desc.css
+++ b/styles/blocks/future-desc/future-desc.css
@@ -3,3 +3,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 768px) {
+  .future-desc {
+    display: none;
+  }
+}
