--- a/styles/blocks/futures/futures.css
+++ b/styles/blocks/futures/futures.css
@@ -3,3 +3,11 @@
   margin: 0 auto 70px auto;
   padding: 0 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .futures {
+    max-width: 375px;
+    margin: 0 auto 28px auto;
+    padding: 0 20px;
+  }
+}
