--- a/styles/blocks/milestones/__item/milestones__item.css
+++ b/styles/blocks/milestones/__item/milestones__item.css
@@ -1,3 +1,9 @@
 .milestones__item {
   flex: 0 0 360px;
 }
+
+@media screen and (max-width: 768px) {
+  .milestones__item {
+    flex: 0 0 160px;
+  }
+}
