--- a/styles/blocks/milestones/milestones.css
+++ b/styles/blocks/milestones/milestones.css
@@ -3,3 +3,11 @@
   margin: 0 auto 120px auto;
   padding: 0 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .milestones {
+    max-width: 375px;
+    margin: 0 auto 28px auto;
+    padding: 0 21px;
+  }
+}
