--- a/styles/blocks/event/__text/event__text.css
+++ b/styles/blocks/event/__text/event__text.css
@@ -8,3 +8,10 @@
 
   text-transform: lowercase;
 }
+
+@media screen and (max-width: 768px) {
+  .event__text {
+    margin: 0;
+    font-size: 8px;
+  }
+}
