--- a/styles/blocks/event/__date/event__date.css
+++ b/styles/blocks/event/__date/event__date.css
@@ -7,3 +7,12 @@
   font-weight: 700;
   color: var(--p-blue);
 }
+
+@media screen and (max-width: 768px) {
+  .event__date {
+    flex: initial;
+    font-size: 19px;
+    line-height: 1.3;
+    margin-right: 10px;
+  }
+}
