--- a/styles/blocks/event/event.css
+++ b/styles/blocks/event/event.css
@@ -8,3 +8,9 @@
   background: #ffffff;
   border-radius: 5px;
 }
+
+@media screen and (max-width: 768px) {
+  .event {
+    padding: 27px 26px 24px 13px;
+  }
+}
