--- a/styles/blocks/events/__button/events__button.css
+++ b/styles/blocks/events/__button/events__button.css
@@ -15,3 +15,9 @@
   font-weight: 500;
   color: #ffffff;
 }
+
+@media screen and (max-width: 768px) {
+  .events_button {
+    display: none;
+  }
+}
