--- a/styles/blocks/office-description/__name/office-description__name.css
+++ b/styles/blocks/office-description/__name/office-description__name.css
@@ -8,3 +8,10 @@
   font-weight: 500;
   color: var(--p-blue);
 }
+
+@media screen and (max-width: 768px) {
+  .office-description__name {
+    margin: 0 0 8px;
+    font-size: 12px;
+  }
+}
