--- a/styles/blocks/offices/__list/offices__list.css
+++ b/styles/blocks/offices/__list/offices__list.css
@@ -8,3 +8,15 @@
   padding: 0;
   list-style: none;
 }
+
+@media screen and (max-width: 768px) {
+  .offices__list {
+    grid-template-columns: unset;
+    grid-auto-rows: unset;
+    grid-gap: unset;
+
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+}
