--- a/components/product/product-details/product-details.module.css
+++ b/components/product/product-details/product-details.module.css
@@ -4,7 +4,7 @@
 
 .productPage {
   box-sizing: content-box;
-  width: 1160px;
+  max-width: 1160px;
   padding: 0 20px 35px;
 }
 
@@ -67,4 +67,49 @@
 
 .productPage__backBtnText {
   margin-left: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .productPage {
+    max-width: 375px;
+    padding: 0 20px 35px;
+  }
+
+  .productPage__title {
+    font-size: 24px;
+    line-height: 29px;
+    margin: 25px 0;
+  }
+
+  .productPage__feature {
+    font-size: 12px;
+    line-height: 1.4;
+    flex: 1 0 calc(100% / 3 - 10px);
+  }
+
+  .productPage__featureValue {
+    margin-top: 3px;
+    font-size: 12px;
+    line-height: 1.4;
+  }
+
+  .productPage__featuresList {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-bottom: 50px;
+    list-style: none;
+    gap: 10px;
+  }
+
+  .productPage__infoTitle {
+    font-size: 14px;
+    margin-bottom: 14px;
+  }
+
+  .productPage__infoContent {
+    font-size: 12px;
+    max-width: 900px;
+    margin: 0;
+  }
 }
