--- a/components/product/product-tabviews/product-tabview-bottom/components/tabs/tab-documents/document-info/document-info.module.css
+++ b/components/product/product-tabviews/product-tabview-bottom/components/tabs/tab-documents/document-info/document-info.module.css
@@ -18,3 +18,19 @@
   width: 40px;
   height: 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .documentInfo__text {
+    font-size: 14px;
+    line-height: 1.3;
+    font-weight: 400;
+  }
+
+  .documentInfo__icon {
+    width: 27px;
+  }
+
+  .documentInfo:not(:last-child) {
+    margin-bottom: 27px;
+  }
+}
