--- a/components/ui/breadcrumbs.module.css
+++ b/components/ui/breadcrumbs.module.css
@@ -22,3 +22,20 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+
+@media screen and (max-width: 768px) {
+  .breadcrumbs__item {
+    font-size: 10px;
+    line-height: 1.4;
+  }
+
+  .breadcrumbs__item:not(:last-child)::after {
+    content: "";
+    width: 5px;
+    height: 5px;
+    background: url("../../public/images/icon-next-crumb.svg") no-repeat center;
+    background-size: cover;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
