--- a/styles/blocks/products/__search-form/products__search-form.css
+++ b/styles/blocks/products/__search-form/products__search-form.css
@@ -3,3 +3,9 @@
   box-sizing: border-box;
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 768px) {
+  .products__search-form {
+    display: none;
+  }
+}
