--- a/components/Filter/FilterMenu.module.css
+++ b/components/Filter/FilterMenu.module.css
@@ -1,10 +1,14 @@
 .root {
   height: 100%;
   overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+  position: relative;
 }
 
 .filtersList {
-  margin: 0;
+  margin: 0 0 50px;
   padding: 0;
   list-style: none;
 }
@@ -39,4 +43,30 @@
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.submitWrapper {
+  position: sticky;
+  margin-top: auto;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.submit {
+  width: 100%;
+  max-width: 315px;
+  padding: 10px 0;
+  border: none;
+  font-family: var(--font-montserrat);
+  background: var(--p-orange-accent);
+  color: white;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  transition: 100ms ease;
+}
+
+.submit:active {
+  transform: scale(0.95);
 }
