--- a/components/order/order-navigation.module.css
+++ b/components/order/order-navigation.module.css
@@ -28,7 +28,6 @@
 
 .orderNavigation__item_active {
   color: var(--p-blue);
-  /*border-bottom: 1px solid var(--p-blue);*/
 }
 
 .orderNavigation__item_active::after {
@@ -39,4 +38,40 @@
   position: absolute;
   bottom: -1px;
   left: 0;
+}
+
+.mobileNav {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 25px 0 0;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #dedede;
+}
+.stepNum {
+  font-family: var(--font-montserrat);
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 12px;
+  color: #e0e0e0;
+  width: 100%;
+}
+.stepName {
+  margin: 10px 0 0;
+  padding-left: 10px;
+  font-family: var(--font-montserrat);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: #333333;
+}
+.nextButton {
+  width: 27px;
+  height: 27px;
+  padding: 0;
+  border: none;
+  margin-left: auto;
+  background: url("/images/icon-next.svg") no-repeat center;
+}
+
+@media screen and (max-width: 768px) {
 }
