--- a/pages/order/step-1.module.css
+++ b/pages/order/step-1.module.css
@@ -21,6 +21,10 @@
   margin: 74px 0 60px;
 }
 
+.breadcrumbsContainer {
+  margin-top: 60px;
+}
+
 .orderContainer__messageContainer {
   margin-bottom: 60px;
 }
