--- a/components/layout/footer-mobile.module.css
+++ b/components/layout/footer-mobile.module.css
@@ -97,6 +97,10 @@
   margin-bottom: 8px;
 }
 
+.officeContent:hover {
+  color: white;
+}
+
 .locals {
   max-width: 375px;
   padding: 0 21px 20px;
