--- a/components/other-blocks/places-search/places-search.module.css
+++ b/components/other-blocks/places-search/places-search.module.css
@@ -4,11 +4,15 @@
 
 @media screen and (max-width: 768px) {
   .root {
+    border-radius: 23px;
     width: 100%;
     margin-bottom: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3) !important;
   }
 
   .input {
+    border: none !important;
+    box-shadow: none !important;
     padding: 10px !important;
     font-size: 12px !important;
   }
