--- a/pages/order/step-1.module.css
+++ b/pages/order/step-1.module.css
@@ -252,7 +252,7 @@
 
   .orderContainer__controlsContainer {
     display: flex;
-    margin: 0 0 60px;
+    margin: 40px 0 60px;
     justify-content: center;
   }
 }
