--- a/styles/blocks/partner/__logo-wrapper/partner__logo-wrapper.css
+++ b/styles/blocks/partner/__logo-wrapper/partner__logo-wrapper.css
@@ -5,3 +5,13 @@
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 768px) {
+  .partner__logo-wrapper {
+    flex: initial;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
