--- a/styles/blocks/partners/__list/partners__list.css
+++ b/styles/blocks/partners/__list/partners__list.css
@@ -8,3 +8,17 @@
   padding: 0;
   list-style: none;
 }
+
+@media screen and (max-width: 768px) {
+  .partners__list {
+    grid-template-columns: initial;
+    grid-auto-rows: initial;
+    grid-row-gap: initial;
+    display: flex;
+    flex-direction: column;
+
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+}
