--- a/styles/blocks/partners/partners.css
+++ b/styles/blocks/partners/partners.css
@@ -6,3 +6,11 @@
   margin: 100px auto 150px auto;
   padding: 0 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .partners {
+    max-width: 375px;
+    margin: 30px auto 50px auto;
+    padding: 0 20px;
+  }
+}
