--- a/components/product/product-tabviews/product-tabview-top/components/tabs/price-calculator/price-calculator.module.css
+++ b/components/product/product-tabviews/product-tabview-top/components/tabs/price-calculator/price-calculator.module.css
@@ -66,3 +66,9 @@
   text-align: center;
   color: #02569c;
 }
+
+@media screen and (max-width: 768px) {
+  .fieldWrapper__title {
+    font-size: 16px;
+  }
+}
